mypay.deploy/base/mypay4-be/mypay4-backend-cittadino-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    k8tz.io/injected: "true"
    k8tz.io/timezone: Europe/Rome
  name: mypay4-backend-cittadino
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mypay4
      run: mypay4-backend-cittadino
  template:
    metadata:
      annotations:
        k8tz.io/injected: "true"
        k8tz.io/timezone: Europe/Rome
        kubectl.kubernetes.io/default-container: mypay4-backend
      labels:
        app: mypay4
        run: mypay4-backend-cittadino
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: deployment
                operator: In
                values:
                - mypay4-backend-operatore
            topologyKey: topology.kubernetes.io/zone
      containers:
      - env:
        - name: FLUENT_ELASTICSEARCH_LOGSTASH_PREFIX
          value: mypay4_backend_cittadino.access
        - name: TZ
          value: Europe/Rome
        image: _REGISTRY_ENTE_/common/mypay4-fluentd:latest
        imagePullPolicy: Always
        name: fluentd-agent
        resources:
          limits:
            cpu: "0.5"
            memory: 1Gi
          requests:
            cpu: "0.1"
            memory: 100Mi
        volumeMounts:
        - mountPath: /mypay4/logs
          name: access-logs
        - mountPath: /fluentd/etc
          name: mypay4-be-fluent-config
        - mountPath: /etc/localtime
          name: k8tz
          readOnly: true
          subPath: Europe/Rome
        - mountPath: /usr/share/zoneinfo
          name: k8tz
          readOnly: true
      - env:
        - name: TZ
          value: Europe/Rome
        image: _REGISTRY_ENTE_/mypay4/mypay4-be:latest
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /mypay4/apicittadino/actuator/health/liveness
            port: 8081
          initialDelaySeconds: 20
          periodSeconds: 10
        name: mypay4-backend
        ports:
        - containerPort: 8443
          protocol: TCP
        - containerPort: 8081
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /mypay4/apicittadino/actuator/health/readiness
            port: 8081
          initialDelaySeconds: 20
          periodSeconds: 8
        resources:
          limits:
            cpu: 2000m
            memory: 4Gi
          requests:
            cpu: 500m
            memory: 2Gi
        volumeMounts:
        - mountPath: /mypay4/logs
          name: access-logs
        - mountPath: /E45
          name: conf
        - mountPath: /secret
          name: certs
        - mountPath: /etc/localtime
          name: k8tz
          readOnly: true
          subPath: Europe/Rome
        - mountPath: /usr/share/zoneinfo
          name: k8tz
          readOnly: true
      hostAliases: null
      imagePullSecrets:
      - name: registry-_ENTE_-secret
      securityContext:
        fsGroup: 9001
        runAsGroup: 9001
        runAsUser: 9001
      terminationGracePeriodSeconds: 60
      volumes:
      - name: conf
        persistentVolumeClaim:
          claimName: mypay4-claim
      - emptyDir: {}
        name: access-logs
      - configMap:
          name: mypay4-be-fluent-config
        name: mypay4-be-fluent-config
      - name: certs
        secret:
          secretName: mypay4-certs
      - hostPath:
          path: /usr/share/zoneinfo
        name: k8tz
