mypay.deploy/base/mypay4-be/mypay4-backend-operatore-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: mypay4-backend-operatore-service
spec:
  type: ClusterIP
  selector:
    run: mypay4-backend-operatore
    app: mypay4
  ports:
  - name: http
    port: 8081
    targetPort: 8081
  - name: https
    port: 8443
    targetPort: 8443
