mypay.deploy/base/mypay4-be/mypay4-backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mypay4-backend-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 300m
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "90"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"

spec:
  rules:
  - host: mypay4._BASE_URL_
    http:
      paths:
      - path: /ws/fesp
        pathType: Prefix
        backend:
          service:
            name: mypay4-backend-cittadino-service
            port:
              number: 8081
